# analystOslik

./: .dockerignore  .gitignore  DEPLOY.md  HACKATHON.md  README.md  pyproject.toml
backend/: .env.example  pyproject.toml
backend/scripts/: create_admin_hash.py  migrate.py
backend/src/t2r/: errors.py  logging.py  main.py  settings.py  types.py
backend/src/t2r/agents/admin_edit/: pipeline.py
backend/src/t2r/agents/admin_profiling/: describe.py  note_writer.py  pass1.py  pass2.py  pipeline.py  scheduler.py
backend/src/t2r/agents/client_agent/: deps.py  (+2 more)
backend/src/t2r/api/: cookies.py  deps.py
backend/src/t2r/di/: container.py
backend/src/t2r/services/: auth_service.py  edit_service.py  glossary_service.py  ingest_chunking.py  profiling_service.py  selection_service.py  semantic_service.py  session_service.py  source_service.py  sql_notes_service.py  table_chat_service.py  task_service.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_admin_auth.py  test_audit_and_tables.py  test_demo_sse.py  test_health.py  test_migrations.py  test_pass2.py  test_profiling_tasks.py  test_profiling_uniqueness.py  test_profiling_v2.py  test_sources_crud.py
backend/tests/unit/: test_auth_service.py  test_cipher.py  test_client_agent.py  test_events_bus.py  test_json_extractor.py  test_jwt.py  test_pass1_heuristics.py  test_pass2_grouping.py  test_pass2_questions.py  test_passwords.py  test_pipeline.py  test_profiling_enrichment.py  test_profiling_service_idempotent.py  test_prompt_loader.py  test_schema_renderer.py  test_session_service.py  test_sql_guard.py  test_task_service_idempotent.py  test_xlsx.py
(+166 files in other folders)
