[project]
name = "t2r-backend"
version = "0.1.0"
description = "text-to-report backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "dishka>=1.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "pgvector>=0.3",
    "neo4j>=5.22",
    "clickhouse-connect>=0.7",
    "aiohttp>=3.9",
    "openai>=1.40",
    "sqlglot>=25.0",
    "openpyxl>=3.1",
    # cryptography 48.x wheel ships AVX/AVX2-only Rust intrinsics that SIGILL under
    # Docker Desktop on macOS aarch64. Pinning to 44.x (last known-good).
    "cryptography>=43.0,<45",
    "bcrypt>=4.2,<5",
    "pyjwt>=2.9",
    "slowapi>=0.1.9",
    "structlog>=24.2",
    "orjson>=3.10",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "anyio>=4.4",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/t2r"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires postgres/docker (testcontainers)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
